# wasmcloud-example

./: .gitignore  Cargo.toml  README.md  wadm.yaml
filer/: Cargo.toml  wasmcloud.toml
filer/src/: lib.rs
filer/wit/: world.wit
listener/: Cargo.toml  wasmcloud.toml
listener/src/: lib.rs
listener/wit/: world.wit
storage-provider/: Cargo.toml  wasmcloud.toml
storage-provider/src/: main.rs  provider.rs
storage-provider/wit/: world.wit
