[package]
name = "fs-storage-provider"
version = "0.1.0"
edition = "2021"
description = """
A capability provider template built for implementation of custom capabilities.
"""

[workspace]

[badges.maintenance]
status = "actively-developed"

[dependencies]
anyhow = "1.0.82"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1"
wasmcloud-provider-sdk = { version = "0.13.0", features = ["otel"] }
wgpu = "24.0.1"
wit-bindgen-wrpc = "0.9.0"
